--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,6 +2,7 @@
 #  version : Plugin version. Don't edit this unless you want things to go higgledy-piggledy.
 #  plugin-enabled : Toggles the plugin
 #  negotiation-rate : % chance of negotiation occurring, if conditions are met
+#  power-effect-duration-ticks : The number of ticks a bestowed power lasts
 #  negotiation-idle-timeout-ticks : Ticks without a player response before negotiation ends
 #  negotiation-cooldown-ticks : Minimum ticks before a player can get another negotiation
 #  negotiation-damage-grace-ticks : The amount of ticks a player is invincible for after a negotiation to allow them to move safely
@@ -11,6 +12,7 @@
 version: 1.0
 plugin-enabled: true
 negotiation-rate: 100.0
+power-effect-duration-ticks: 6000
 negotiation-idle-timeout-ticks: 600
 negotiation-cooldown-ticks: 3600
 negotiation-damage-grace-ticks: 30
