--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: 1.0
 author: Zazsona
 main: com.zazsona.mobnegotiation.MobNegotiationPlugin
 api-version: 1.17
-depend: [Vault]
+softdepend: [Vault]
 commands:
   __negotiation_response__:
     description: Used for internal logic.
