--- a/src/main/resources/powers.yml
+++ b/src/main/resources/powers.yml
@@ -1,4 +1,5 @@
 # The effect powers offered by various mob types.
 version: 1.0.0
 creeper: FAST_DIGGING
-zombie: INCREASE_DAMAGE
+zombie: DAMAGE_RESISTANCE
+skeleton: INCREASE_DAMAGE
