--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,14 @@ repositories {
     maven { url "https://libraries.minecraft.net/" }
     maven { url "https://repo.codemc.org/repository/maven-public" }
     maven { url 'https://jitpack.io' }
+    maven { url "https://download.red-gate.com/maven/release" }
 }
 
 dependencies {
     implementation 'org.bstats:bstats-bukkit:3.0.2'
+    implementation 'org.flywaydb:flyway-core:11.0.0'
+    implementation 'org.xerial:sqlite-jdbc:3.47.1.0'
+    implementation 'org.apache.commons:commons-text:1.12.0'
     compileOnly "org.spigotmc:spigot-api:1.20-R0.1-SNAPSHOT"
     compileOnly "com.github.MilkBowl:VaultAPI:1.7"
 }
