--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v4
         with:
+          cache-dependency-path: ./docs/mob-negotiation/package-lock.json
           node-version: 18
           cache: npm
 
